<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_admittance_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ajaygunalan1995@gmai.com">ajay</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>control_msgs</depend>
  <depend>ur_controllers</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur_simulation_gz</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
